--- a/week7/views/postreq.handlebars
+++ b/week7/views/postreq.handlebars
@@ -1,4 +1,5 @@
-<h1>You sent the following data in a POST request:</h1>
+<h1>You sent the following data in a {{this.type}} request:</h1>
+<h5> in order of importance (EG query then body requests) </h5>
 <ul>
   {{#each dataList}}
     <li>{{this.name}}: {{this.value}}
